# cmake_learning

./: ReadMe
t1/: ALL_BUILD.vcxproj  CMakeCache.txt  HELLO.VC.db  HELLO.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake过程.txt  hello.vcxproj  hello.vcxproj.filters  main.c
t1/Debug/: hello.ilk
t1/Win32/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
t1/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
t1/hello.dir/Debug/hello.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
t1_s/: CMakeLists.txt  编译过程.txt
t2/: CMakeLists.txt
t2_s/: CMakeLists.txt
t3_s/: 新建文本文档.txt
t3_s/lib/: CMakeLists.txt  hello.c
t3_s/tmp/usr/include/hello/: hello.h
t3_s/tmp/usr/lib/: hello.lib
t4/: CMakeLists.txt
t4/src/: CMakeLists.txt
t5/src/: CMakeLists.txt  main.c
t6/: CMakeLists.txt
t6/cmake/: FindHELLO.cmake
t6/src/: CMakeLists.txt  main.c
